[gd_scene load_steps=3 format=3 uid="uid://du1ilv5nmwonr"]

[ext_resource type="Texture2D" uid="uid://kc4cqarq3e2" path="res://char_assets/cube.png" id="1_0ymn0"]
[ext_resource type="Script" path="res://scean/index_sceans/multiplayerLoby.gd" id="1_xbd18"]

[node name="loby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbd18")
metadata/_edit_horizontal_guides_ = [179.0]

[node name="player_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.142
anchor_bottom = 0.105
offset_right = -123.584
offset_bottom = -45.04
theme_override_font_sizes/font_size = 47
text = "players"

[node name="player1" type="Sprite2D" parent="."]
position = Vector2(102, 181)
texture = ExtResource("1_0ymn0")

[node name="Label2" type="Label" parent="player1"]
offset_left = -38.0
offset_top = -69.0
offset_right = 40.0
offset_bottom = -43.0
text = "name one"

[node name="player2" type="Sprite2D" parent="."]
position = Vector2(297, 179)
texture = ExtResource("1_0ymn0")

[node name="Label3" type="Label" parent="player2"]
offset_left = -37.0
offset_top = -62.0
offset_right = 41.0
offset_bottom = -36.0
text = "name two
"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 0.628
anchor_right = 0.176
anchor_bottom = 0.778
offset_left = -0.304
offset_top = 0.0559998
offset_right = 0.247986
offset_bottom = -0.144043
theme_override_font_sizes/font_size = 121
text = "START"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
